language/move-lang/tests/move_check/parser/address_too_long_exp.exp
error: 

   ┌── tests/move_check/parser/address_too_long_exp.move:4:18 ───
   │
 4 │         let x = @0x112233445566778899101122334455667788992011223344556677889930112233;
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 16 bytes
   │

